--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -21,6 +21,7 @@
                 <th>게시글번호</th>
                 <th>제목</th>
                 <th>작성자</th>
+                <th>내용</th>
                 <th>최종수정일</th>
             </tr>
             </thead>
@@ -30,6 +31,7 @@
                     <td>{{id}}</td>
                     <td><a href="/posts/update/{{id}}">{{title}}</a></td>
                     <td>{{author}}</td>
+                    <td>{{content}}</td>
                     <td>{{modifiedDate}}</td>
                 </tr>
             {{/posts}}
